--- a/src/sections/Header/Header.css
+++ b/src/sections/Header/Header.css
@@ -6,6 +6,7 @@ header{
     height: 550px;
     padding: var(--padding);
     position: relative;
+    animation: headerBgAnimation ease-in-out 1s 0s;
 }
 
 header .textArea{
@@ -17,4 +18,13 @@ header .textArea{
     width: 80%;
     padding: var(--padding);
     text-align: center;
+}
+
+@keyframes headerBgAnimation {
+    from{
+        background-position: center 100%;
+    }
+    to{
+        background-position: center top;
+    }
 }
